assets/css/kv-dynagrid.css
/*!
 * @package   yii2-dynagrid
 * @author    Kartik Visweswaran <kartikv2@gmail.com>
 * @copyright Copyright &copy; Kartik Visweswaran, Krajee.com, 2015
 * @version   1.4.3
 *
 * Styling for yii2-dynagrid.
 * 
 * Author: Kartik Visweswaran
 * Copyright: 2015, Kartik Visweswaran, Krajee.com
 * For more JQuery plugins visit http://plugins.krajee.com
 * For more Yii related demos visit http://demos.krajee.com
 */
.dynagrid-submit-message {
    background: #fff url('../img/loading.gif') no-repeat center 28px;
    font-size: 1.6em;
    color: #aaa;
    text-align: center;
    vertical-align: bottom;
    padding: 50px;
}

.dynagrid-column-label {
    text-align: center;
    font-weight: bold;
    padding: 9px 0;
    margin: 5px 0 15px 0;
    border-top: 1px solid #eee;
    border-bottom: 1px solid #eee;
}

.dynagrid-sortable-separator {
    font-size: 3em;
    color: #999;
}

.dynagrid-sortable-header {
    font-weight: bold;
    opacity: 1 !important;
}

.dynagrid-settings-text ul {
    border: 1px solid #ddd;
    border-radius: 4px;
    padding: 8px;
    padding-left: 24px;
    list-style-type: square;
}

.dynagrid-settings-text li {
    line-height: 2em;
}

